welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value i
  var T = new Array [Color](i)
                            ^Array1:4: error: not found: value i
  i = getMondeHauteur()
  ^Array1:8: error: not found: value T
T(0) = getCouleurSol()
^Array1:10: error: not found: value T
T(1) = getCouleurSol() 
^